<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityKotlinExtensions">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_surname"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_phone_number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="name"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier_headers_vertical"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:targetApi="o"
        tools:text="@tools:sample/first_names" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="name"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        tools:targetApi="o"
        tools:text="@tools:sample/lorem/random" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="phone"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="@+id/et_surname"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_surname"
        app:layout_constraintTop_toBottomOf="@+id/et_surname"
        tools:targetApi="o"
        tools:text="@tools:sample/us_phones" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_phone_number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
        tools:targetApi="o"
        tools:text="@tools:sample/full_names" />

    <Button
        android:id="@+id/btn_open_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_second_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_headers_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="txt_username,txt_password,txt_phone_number,txt_surname" />

</androidx.constraintlayout.widget.ConstraintLayout>