<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/txt_first_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/first_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@id/txt_first_name_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/group_first_name"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_first_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/group_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_first_name_header"
        tools:text="@tools:sample/first_names"/>

    <TextView
        android:id="@+id/txt_last_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/last_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@id/txt_last_name_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/group_surname"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_last_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/group_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_last_name_header"
        tools:text="@tools:sample/last_names"/>

    <TextView
        android:id="@+id/txt_phone_number_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/phone_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@id/txt_phone_number_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_phone_number"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_phone_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autoLink="phone"
        app:layout_constraintBottom_toBottomOf="@id/group_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone_number_header"
        tools:text="@tools:sample/us_phones"/>

    <TextView
        android:id="@+id/txt_password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@id/txt_password_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/group_password"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_password_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/group_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_header"
        tools:text="@tools:sample/lorem"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_first_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:constraint_referenced_ids="txt_first_name_header,txt_first_name_value"
        app:layout_constraintBottom_toTopOf="@+id/group_surname"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_surname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:constraint_referenced_ids="txt_last_name_header,txt_last_name_value"
        app:layout_constraintBottom_toTopOf="@+id/group_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/group_first_name" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_phone_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:constraint_referenced_ids="txt_password_value,txt_phone_number_header"
        app:layout_constraintBottom_toTopOf="@+id/group_password"
        app:layout_constraintTop_toBottomOf="@+id/group_surname" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:constraint_referenced_ids="txt_phone_number_value,txt_password_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_phone_number" />


</androidx.constraintlayout.widget.ConstraintLayout>